@@ -28,8 +28,7 @@ final class ValueContext {
         try {
             getter = MethodHandles.publicLookup().unreflect(identifier.getMethod(getterName)).asType(OBJECT_METHOD);
         } catch (IllegalAccessException | NoSuchMethodException e) {
-            throw new IllegalStateException(String.format("Cannot find method %s in class %s", getterName, identifier),
-                e);
+            throw new IllegalStateException("Cannot find method %s in class %s".formatted(getterName, identifier), e);
         }
         this.identifier = identifier;
         codec = leaf.getValueCodec();
